--- a/.eslintrc
+++ b/.eslintrc
@@ -13,11 +13,14 @@
     "semi": [
       2,
       "always"
-    ]
+    ],
+    "no-redeclare": "off",
+    "no-prototype-builtins": "off",
+    "no-useless-escape": "off"
   },
   "env": {
     "browser": true,
-    "node":true
+    "node": true
   },
   "extends": "eslint:recommended"
 }
