--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simplemde",
-  "version": "1.11.2",
+  "version": "1.11.3",
   "description": "A simple, beautiful, and embeddable JavaScript Markdown editor. Features autosaving and spell checking.",
   "keywords": [
     "embeddable",
@@ -37,12 +37,12 @@
     "gulp-jsbeautifier": "*",
     "gulp-clean-css": "*",
     "gulp-rename": "*",
-    "gulp-uglify": "*",
+    "gulp-terser": "*",
     "vinyl-source-stream": "*",
     "vinyl-buffer": "*"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/NextStepWebs/simplemde-markdown-editor"
+    "url": "https://github.com/pulkitmittal/simplemde-markdown-editor"
   }
 }
